src/test/ui/specialization/deafult-associated-type-bound-2.stderr
warning: the feature `specialization` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/deafult-associated-type-bound-2.rs:2:12
   |
LL | #![feature(specialization)]
   |            ^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #31844 <https://github.com/rust-lang/rust/issues/31844> for more information

error[E0277]: can't compare `&'static B` with `B`
  --> $DIR/deafult-associated-type-bound-2.rs:16:5
   |
LL |     type U: PartialEq<T>;
   |     --------------------- required by `X::U`
...
LL |     default type U = &'static B;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no implementation for `&'static B == B`
   |
   = help: the trait `PartialEq<B>` is not implemented for `&'static B`

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0277`.
